crates/linesmith/src/tui/snapshots/linesmith__tui__items_editor__tests__items_editor_default_fallback.snap
---
source: crates/linesmith/src/tui/items_editor.rs
expression: "render_to_string(&s, &doc, 60, 14)"
---
                         edit lines                         
a add · i insert ·   Space sep · r raw · m merge · d delete 
                                                            
▶ model                                                     
  context_window                                            
  cost                                                      
  effort                                                    
  git_branch                                                
  workspace
