crates/linesmith/src/tui/snapshots/linesmith__tui__items_editor__tests__items_editor_narrow.snap
---
source: crates/linesmith/src/tui/items_editor.rs
expression: "render_to_string(&s, &doc, 40, 14)"
---
               edit lines               
a add · i insert ·   Space sep · r raw ·
                                        
▶ model                                 
  context_window                        
  git_branch                            
  cwd
