crates/linesmith/src/tui/snapshots/linesmith__tui__items_editor__tests__items_editor_wide.snap
---
source: crates/linesmith/src/tui/items_editor.rs
expression: "render_to_string(&s, &doc, 100, 14)"
---
                                             edit lines                                             
  a add · i insert ·   Space sep · r raw · m merge · d delete · c clear · k clone · Enter move-mode 
                                                                                                    
▶ model                                                                                             
  context_window                                                                                    
  git_branch                                                                                        
  cwd
